# the-motion-in-everything

./: .gitignore  Cargo.toml  index.html  readme.md
.github/workflows/: ci.yml
assets/dialogs/: follower.dlg.ron  torvel.dlg.ron
assets/dialogue/alor-dialogue/: dialogue.yarn
assets/shaders/: post_process_pass.wgsl
credits/: credits.md
src/: bevy_config.rs  lib.rs  main.rs  menu.rs  shader.rs
src/dev/: dev_editor.rs
src/file_system_interaction/: asset_loading.rs
src/world_interaction/dialog/: yarn.rs
