[package]
authors = ["Lyla <wallamide@gmail.com>, Jan Hohenheim <jan@hohenheim.ch>"]
edition = "2021"
name = "the-motion-in-everything"
version = "0.2.0"
license = "MIT OR  Apache-2.0"
exclude = [
    "dist",
    "build",
    "assets",
    "credits",
    "saves",
    "resources",
    "build.rs",
]
description = "use magic made from the earth as you learn how to move the motion in everything."
repository = "https://github.com/wallamide/the-motion-in-everything/"
keywords = ["gamedev", "bevy", "template", "game"]
categories = ["game-development, game jam game"]
homepage = "https://wallamide.github.io/the-motion-in-everything/"

[features]
default = ["native-dev"]

core = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/jpeg",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/tonemapping_luts",
    "bevy/serialize",
]

dev = ["dep:bevy_editor_pls", "dep:bevy_prototype_debug_lines", "core"]

native-dev = ["bevy/bevy_dylib", "bevy/filesystem_watcher", "dev", "native"]

native = ["bevy_rapier3d/parallel", "dep:bevy_hanabi", "core"]

wasm = ["bevy_rapier3d/wasm-bindgen", "core", "dep:wasm-bindgen"]

wasm_dev = ["wasm", "dev"]

tracing = ["bevy/trace_chrome"]

[dependencies]
anyhow = "1"
bevy = { version = "0.10", default-features = false }
bevy_asset_loader = { version = "0.16", features = ["progress_tracking"] }
bevy_common_assets = { version = "0.6", features = ["ron", "toml"] }
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly", rev = "b2f5dc787664cb8c3d92f792cbd437886fc090c6" }
bevy_editor_pls = { version = "0.3", optional = true }
bevy_egui = "0.20"
bevy_hanabi = { version = "0.6", optional = true }
bevy_kira_audio = "0.15"
bevy_mod_sysfail = "2"
bevy_prototype_debug_lines = { version = "0.10", optional = true, features = [
    "3d",
] }
bevy_rapier3d = { version = "0.21", features = [
    "serde-serialize",
    "simd-nightly",
] }
bitflags = "2"
chrono = "0.4"
glob = "0.3"
indexmap = { version = "1", features = ["serde-1"] }
iyes_progress = "0.8"
leafwing-input-manager = { version = "0.9", features = ["egui"] }
oxidized_navigation = "0.3"
rand = { version = "0.8", features = ["small_rng", "nightly"] }
regex = "1"
ron = "0.8"
seldom_fn_plugin = "0.3"
serde = { version = "1", features = ["derive"] }
spew = "0.2.1"
strum = "0.24"
strum_macros = "0.24"
unicode-segmentation = "1"
warbler_grass = "0.3"
wasm-bindgen = { version = "0.2", optional = true }
yarn-spinner = { git = "https://github.com/sanbox-irl/yarn-spinner", rev = "d7d12ed0c92cf5e5995bb13aadb22d568c85022d" }

# keep the following in sync with Bevy's dependencies
image = { version = "0.24", default-features = false }
winit = { version = "0.28", default-features = false }

[build-dependencies]
embed-resource = "1.4"

[patch.crates-io]
# https://github.com/EmiOnGit/warbler_grass/pull/58
warbler_grass = { git = "https://github.com/janhohenheim/warbler_grass", rev = "41a6039634ad4e48981504d3e46dfdbbdf9f571e" }
